repair header spacing 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,14 @@ body {
   list-style-type: none;
 }
 
+.adv-list .lower-header {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
 .third-section {
   background-color: #f4f4fd;
 }
@@ -116,8 +124,24 @@ body {
   background-color: #ffffff;
 }
 
+.third-section .team-list .team-member .lower-header {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
 .portfolio-list {
   list-style-type: none;
+}
+
+.portfolio-list .lower-header {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .lower-part {
@@ -130,12 +154,4 @@ body {
 
 .advice {
   color: #f4f4fd;
-}
-
-.lower-header {
-  color: #2e2f42;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
 }
